# lead_craft_api

./: .gitignore  Dockerfile  LICENSE  README.md  environment.yml  initial_notebook.ipynb  pyproject.toml
.github/workflows/: tests.yml
data/: molecular_activities.db
notebooks/: LeadCraft_demo.ipynb
src/: config.py
src/database/: db_setup.py  files_and_SQL_utils.py  models.py
src/mol_activity/: main.py
src/mol_activity/utils/: config.py  files_and_SQL_utils.py  logging_utils.py  mol_activity_data_utils.py  similarity_data_utils.py
src/utils/: files_and_SQL_utils.py  logging_utils.py  mol_activity_data_utils.py  similarity_data_utils.py
tests/: test_files_and_SQL_utils.py  test_mol_activity_data_utils.py  test_similarity_data_units.py
