[project]
name = "lead-craft-api"
version = "0.1.0"
description = "Bioactivity retrieval and molecular similarity search via ChEMBL"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "rdkit>=2024.3.1",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "chembl-webresource-client>=0.10.9",
    "requests-cache>=1.2.0",
    "fastapi>=0.115",
]

[dependency-groups]
test = ["pytest>=8.0"]
dev = [
    "ruff",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jupyter>=1.0",
    "jupyterlab>=4.0",
    "ipykernel",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]